# iopddl-solution

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  atcoderlib.hpp  iopddl.cc  iopddl.h  iopddl_test.cc  kotamanegi_structs.cc  kotamanegi_structs.h  main.cc  solver.cc  solver.h  tmp.txt  tmp2.txt
result/: G.eval  M.eval  S.eval
solutions/: A.eval  Y.eval
